@@ -5,6 +5,13 @@ Django MPTT CHANGELOG
 Wed 2nd Jan, 2008
 -----------------
 
+* Fixed a bug in ``TreeManager.move_within_tree`` - it now takes into
+  account whether or not the new parent's right value is greater than
+  that of the node which is being moved.
+
+* Added tests for manually moving nodes using the ``TreeManager``
+  methods.
+
 * Extracted logic for moving a ``Model`` instance to a different parent
   within its current tree from ``mptt.signals.pre_save`` into the
   ``move_within_tree`` method in ``TreeManager``.
